--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 #document settings
-title: Project Open Data
+title: Test Website
 desc: "Open Data Policy — Managing Information as an Asset"
 url: https://project-open-data.cio.gov/
 repo_name: project-open-data.github.io
